made basic customer pages

--- a/customer_pages/customer_login.html
+++ b/customer_pages/customer_login.html
@@ -6,6 +6,8 @@
     <title>Sign In</title>
 </head>
 <body>
+    <!-- the page is not done yet, this is a basic login form -->
+    <h5>SIGN IN</h5>
     <form action="" method="post">
         <!-- user ID -->
         <div>
