--- a/customer_pages/customer_register.html
+++ b/customer_pages/customer_register.html
@@ -7,6 +7,8 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <!-- the page is not done yet, this is a basic register form -->
+    <h5>SIGN UP</h5>
     <form action="" method="post">
         <!-- user ID -->
         <div>
