--- a/customer_pages/welcome.html
+++ b/customer_pages/welcome.html
@@ -16,8 +16,12 @@
     <p>Then get a <em>GYM-MANAGE</em> membership today!</p> 
 
     <button>GET MEMBERSHIP</button>
-    <button>SIGN IN</button>
-    <button>SIGN UP</button> 
+    <button>
+        <a href="./customer_login.html">SIGN IN</a>
+    </button>
+    <button>
+        <a href="./customer_register.html">SIGN UP</a>
+    </button> 
 
     <p>If you're a GYM-MANAGE administrator, <button>click here</button> to switch to <em>administrator mode</em>.</p>
 </body>
