--- a/customer_pages/welcome.html
+++ b/customer_pages/welcome.html
@@ -22,7 +22,8 @@
     <button>
         <a href="./customer_register.html">SIGN UP</a>
     </button> 
-
-    <p>If you're a GYM-MANAGE administrator, <button>click here</button> to switch to <em>administrator mode</em>.</p>
+    <p>If you're a GYM-MANAGE administrator, <button>
+        <a href="../admin_pages/admin_homepage.html">click here</a>
+    </button> to switch to <em>administrator mode</em>.</p>
 </body>
 </html>
