made navigation bar for easy access of all necessary links

--- a/customer_pages/welcome.html
+++ b/customer_pages/welcome.html
@@ -5,9 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym-Manage</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- CSS stylesheet for customer page -->
+    <link rel="stylesheet" href="./style1.css" type="text/css">
 </head>
 <body>
     <!-- navigation bar will go here -->
+    <nav>
+        <button class="btn btn-link">GET MEMBERSHIP</button>
+        <button class="btn btn-link">
+            <a href="./customer_login.html">SIGN IN</a>
+        </button>
+        <button class="btn btn-link">
+            <a href="./customer_register.html">SIGN UP</a>
+        </button> 
+        <button class="btn btn-link">
+            <a href="../admin_pages/admin_homepage.html">ADMIN MODE</a>
+        </button>
+    </nav>
 
     <!-- rest of home page -->
 
@@ -15,15 +32,6 @@
     <p>Do you want to become a "new you" after 2020 is finally over?</p>
     <p>Then get a <em>GYM-MANAGE</em> membership today!</p> 
 
-    <button>GET MEMBERSHIP</button>
-    <button>
-        <a href="./customer_login.html">SIGN IN</a>
-    </button>
-    <button>
-        <a href="./customer_register.html">SIGN UP</a>
-    </button> 
-    <p>If you're a GYM-MANAGE administrator, <button>
-        <a href="../admin_pages/admin_homepage.html">click here</a>
-    </button> to switch to <em>administrator mode</em>.</p>
+    <p>If you're a GYM-MANAGE administrator or employee, click "ADMIN MODE" at the top of the screen.</p>
 </body>
 </html>
