made basic sea-foam-green CSS theme for customer pages

--- a/customer_pages/welcome.html
+++ b/customer_pages/welcome.html
@@ -13,8 +13,13 @@
 </head>
 <body>
     <!-- navigation bar will go here -->
-    <nav>
-        <button class="btn btn-link">GET MEMBERSHIP</button>
+    <nav class="navbar"> 
+        <button class="btn btn-link">
+            <a href="./welcome.html">HOME</a>
+        </button>
+        <button class="btn btn-link">
+            <a href="#">GET MEMBERSHIP</a>
+        </button>
         <button class="btn btn-link">
             <a href="./customer_login.html">SIGN IN</a>
         </button>
@@ -26,7 +31,7 @@
         </button>
     </nav>
 
-    <!-- rest of home page -->
+    <!-- rest of home page, not done yet -->
 
     <p>Are you tired of never being able to fulfill your New Year's resolution?</p>
     <p>Do you want to become a "new you" after 2020 is finally over?</p>
